Allow deleting a todo item
